[gd_scene load_steps=3 format=3 uid="uid://dtlo6joggcmlf"]

[ext_resource type="Script" uid="uid://c2evrvq3k8c2a" path="res://script/level_score_ui.gd" id="1_nxauy"]
[ext_resource type="FontFile" uid="uid://v4gegclfo01d" path="res://fonts/MonaSans-Bold.ttf" id="2_n2bco"]

[node name="LevelScoreUI" type="CanvasLayer"]
script = ExtResource("1_nxauy")

[node name="LevelLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 78.0
offset_bottom = 46.0
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_n2bco")
text = "关卡：1"

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 50.0
offset_right = 84.0
offset_bottom = 76.0
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_n2bco")
text = "分数：0"

[node name="SpeedLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 80.0
offset_right = 84.0
offset_bottom = 106.0
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_n2bco")
text = "速度：0"
